--- a/register.html
+++ b/register.html
@@ -177,27 +177,19 @@
 <section class="register" id="registerSection">
   <h2>Loyalty Points Registration</h2>
   <form id="loyaltyForm">
-    <input type="text" id="name" placeholder="Your Full Name" required />
-    <input type="tel" id="phone" placeholder="Phone Number" required />
-    <input 
-  type="password" 
-  id="password" 
-  placeholder="Create Password" 
-  required 
-  pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$" 
-  title="Password must be at least 6 characters and include letters and numbers." 
-/>
-    <input 
+  <input type="text" id="name" placeholder="Your Full Name" required />
+  <input type="tel" id="phone" placeholder="Phone Number" required />
+  <input type="email" id="email" placeholder="Email Address (optional)" />
+  <input 
   type="password" 
   id="password" 
   placeholder="Create Password" 
   required 
 />
 <small id="strengthMessage" style="display:block; margin-top:5px;"></small>
-    <input type="password" id="password" placeholder="Create Password" required />
-    <button type="submit">Register</button>
-  </form>
-</section>
+<small id="strengthMessage" style="display:block; margin-top:5px;"></small>
+  <button type="submit">Register</button>
+</form>
 
   <!-- Ads Section -->
   <section class="ads" id="adsSection">
@@ -218,6 +210,31 @@
     We use cookies to improve your experience.
     <button onclick="acceptPrivacy()">Accept</button>
   </div>
+  <div style="position: relative;">
+  <input 
+    type="password" 
+    id="password" 
+    placeholder="Create Password" 
+    required 
+    style="padding-right: 40px;" 
+  />
+  <button 
+    type="button" 
+    onclick="togglePassword()" 
+    style="
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.2em;
+      color: #555;
+    "
+  >👁️</button>
+</div>
+<small id="strengthMessage" style="display:block; margin-top:5px;"></small>
 
   <script>
     // Ad Slide Logic
@@ -275,9 +292,9 @@
         }
       );
     } else {
-      console.warn("Geolocation is not supported by this browser.");
-    }
+      console.warn("Geolocation is not supported by this browser
   </script>
+  }
   const passwordInput = document.getElementById("password");
 const strengthMessage = document.getElementById("strengthMessage");
 
